testsuite/tests/rename/should_compile/T17837.hs
{-# LANGUAGE UnboxedTuples #-}

module T17837 where

type UTup62 = (#,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,#)

makeUTup62 = (#,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,#)
