testsuite/tests/rename/should_fail/rnfail056.hs
-- TupleSections not enabled
{-# LANGUAGE UnboxedTuples #-}

module Foo where

foo = (1,)

bar = (# 1, #)
